# luminara

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.dev  Makefile  PLAYBOOK.md  README.md  csos  docker-compose.yml  nginx.conf  pyproject.toml
.book/: book-canvas-server.py
.canvas-tui/: index.html
.claude/: settings.local.json
.csos/: benchmark_results.json  egress.json
.csos/deliveries/: api_test.jsonl  auto_test.jsonl  autonomous_product_innovation_framework.md  benchmark_assessment_with_without_csos.md  benchmark_report.md  benchmark_visualization.html  benchmark_visualization_v2.html  book-canvas-server.py  book-canvas-styles.css  book-canvas-ui.html  bottleneck_analysis.md  data_flow_diagram.html  demo.jsonl  diagramvm_stress_ingress_assessment.md  health.jsonl  innovation_nexus_platform.md  latest.md  mermaid_llvm_compiler_spec.md  revision_summary.md  stock_trend_forecasting_report.md  weather.jsonl  wisdom_2000_c10309.json  wisdom_2000_c10616.json  wisdom_2000_c11024.json  wisdom_2000_c11025.json  wisdom_2000_c11026.json  wisdom_2000_c13034.json  wisdom_2000_c13340.json  wisdom_2000_c13370.json  wisdom_2000_c13373.json  wisdom_2000_c13376.json  wisdom_2000_c13385.json
.csos/rings/: domain_A.mem.json  (+23 more)
.opencode/: opencode.json
infra/: docker-compose.yml
lib/: index.h  membrane.h  page.h  record.h  ring.h
scripts/: auto-feed.sh  benchmark.py  build-codegen.sh  csos-daemon.py  csos-login.py  csos-startup.sh  pre-commit-csos.sh  watchdog.sh
specs/: autodetected.csos  codegen.csos  eco.csos  market.csos  mermaid.csos  specdriven.csos
(+136 files in other folders)
