[project]
name = "devhapos"
version = "0.1.0"
description = "HAPOS - Human Advancement Physics Operating System"
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "HAPOS Team"}]

dependencies = [
    "nats-py>=2.7.0",
    "asyncio>=3.4.3",
    "pydantic>=2.6.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "qdrant-client>=1.8.0",
    "temporalio>=1.5.0",
    "langgraph>=0.1.0",
    "cloudevents>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "invariant: marks tests as invariant verification (run on every PR)",
    "physics: marks tests as physics regression (run on physics code changes)",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
